2005-08-03 06:20 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GNUmakefile: Added new GormViewSizeInspector.h file, split 
	out from the GormViewSizeInspector.h file.
	* GormCore/GormViewSizeInspector.m: Removed interface, put into .h 
	* GormCore/GormViewSizeInspector.h: Moved interface here.
	* Palettes/1Windows/GormNSWindowSizeInspector.gorm: Corrected position
	and sizing of elements in size inspector.
	* Palettes/1Windows/GormWindowAttributesInspector.m: Corrected comment,
	added copyright header.
	* Palettes/1Windows/GormWindowSizeInspector.m: Corrected comment,
	added copyright header.
	* Palettes/1Windows/main.m: Added category for NSPanel to add
	allocSubstitute.  Same as change on HEAD.
	* Palettes/2Controls/GormBoxAttributesInspector.[hm]: Added copyright
	header.
	* Palettes/2Controls/GormCellAttributesInspector.[hm]: Added copyright
	header.
	* Palettes/2Controls/GormColorWellAttributesInspector.[hm]: Added 
	copyright header.
	* Palettes/2Controls/GormFormAttributesInspector.m: 
	Added copyright header.
	* Palettes/2Controls/GormMatrixAttributesInspector.m: Corrected
	comment.
	* Palettes/2Controls/GormPopUpButtonAttributesInspector.m: Corrected
	comment.
	* Palettes/2Controls/GormProgressIndicatorAttributesInspector.m: 
	Corrected comment.
	* Palettes/2Controls/GormSliderAttributesInspector.m: Corrected
	comment.
	* Palettes/2Controls/GormStepperAttributesInspector.m: Corrected
	comment.
	* Palettes/2Controls/GormTextFieldAttributesInspector.m: Corrected
	comment.
	* Palettes/3Containers/GNUmakefile: Added table size inspector files.
	* Palettes/3Containers/GormBrowserAttributesInspector.m: Corrected
	comment.
	* Palettes/3Containers/GormNSOutlineView.[hm]: Added copyright header.
	* Palettes/3Containers/GormTableColumnAttributesInspector.[hm]: Added
	copyright header.  Corrected comment.
	* Palettes/3Containers/GormTableColumnSizeInspector.m: Corrected
	comment.
	* Palettes/3Containers/GormTableViewAttributesInspector.m: Corrected