@@ -1,3 +1,9 @@
+2005-08-03 07:11 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Palettes/4Data/inspectors.m: Removed local declaration of
+	GormViewSizeInspector, added include of new header, added 
+	copyright header.
+
 2005-08-03 06:20 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormCore/GNUmakefile: Added new GormViewSizeInspector.h file, split 
